# libexe

./: .codecov.yml  .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile.am  README  README.macosx  README.mingw  README.static  acinclude.m4  appveyor.yml  build.ps1  configure.ac  dtfabric.yaml  libexe-wiki.ini  libexe.ini  libexe.pc.in  libexe.spec.in  pyproject.toml.in  setup.cfg.in  synclibs.ps1  synclibs.sh  syncsharedlibs.sh  synctestdata.ps1  synctestdata.sh  tox.ini
.github/workflows/: build_ossfuzz.yml  check_source.yml
.travis/: runtests.sh  script.sh
common/: config_winapi.h
documentation/: Executable (EXE) file format.asciidoc
dpkg/: changelog.in  control  copyright  copyright.in  rules
exetools/: Makefile.am  exeinfo.c  exeinput.c  exeinput.h  exeoutput.c  exeoutput.h  exetools_getopt.c  exetools_getopt.h  exetools_i18n.h  exetools_libbfio.h  exetools_libcerror.h  exetools_libclocale.h  exetools_libcnotify.h  exetools_libcstring.h  exetools_libcsystem.h  exetools_libexe.h  exetools_libfdatetime.h  exetools_libuna.h  exetools_output.c  exetools_output.h  exetools_signal.c  exetools_signal.h  exetools_unused.h  info_handle.c  info_handle.h
include/: Makefile.am  libexe.h.in
include/libexe/: codepage.h  definitions.h.in  error.h  extern.h  features.h.in  mapi.h  types.h.in
libexe/: Makefile.am  exe_file_header.h  exe_le_header.h  exe_mz_header.h  exe_ne_header.h  exe_pe_header.h  exe_section_table.h  libexe.c  libexe.rc.in  libexe_array_type.c  libexe_array_type.h  libexe_codepage.h  libexe_coff_header.c  libexe_coff_header.h  libexe_coff_optional_header.c  libexe_coff_optional_header.h  libexe_data_directory_descriptor.h  libexe_debug.c  libexe_debug.h  libexe_debug_data.c  libexe_debug_data.h  libexe_definitions.h  libexe_definitions.h.in  libexe_error.c  libexe_error.h  libexe_export_table.c  libexe_export_table.h  libexe_extern.h  libexe_file.c  libexe_file.h  libexe_import_table.c  libexe_import_table.h  libexe_io_handle.c  libexe_io_handle.h  libexe_le_header.c  libexe_le_header.h  libexe_libbfio.h  libexe_libcdata.h  libexe_libcerror.h  libexe_libclocale.h  (+22 more)
m4/: libfdata.m4  libfdatetime.m4  yaltools.m4
macosx/: Introduction.rtf.in  Makefile.am  Readme.rtf
macosx/libexe.pmdoc/: 01bin.xml.in  02include.xml.in  03lib.xml.in  04share.xml.in  05python.xml.in  index.xml.in
manuals/: Makefile.am  exeinfo.1  libexe.3
msvscpp/: Makefile.am  libexe.sln
msvscpp/exe_test_coff_header/: exe_test_coff_header.vcproj
msvscpp/exe_test_coff_optional_header/: exe_test_coff_optional_header.vcproj
msvscpp/exe_test_data_directory_descriptor/: exe_test_data_directory_descriptor.vcproj
msvscpp/exe_test_debug_data/: exe_test_debug_data.vcproj
msvscpp/exe_test_error/: exe_test_error.vcproj
msvscpp/exe_test_export_table/: exe_test_export_table.vcproj
msvscpp/exe_test_file/: exe_test_file.vcproj
msvscpp/exe_test_get_version/: exe_test_get_version.vcproj
msvscpp/exe_test_import_table/: exe_test_import_table.vcproj
msvscpp/exe_test_io_handle/: exe_test_io_handle.vcproj
msvscpp/exe_test_le_header/: exe_test_le_header.vcproj
msvscpp/exe_test_mz_header/: exe_test_mz_header.vcproj
msvscpp/exe_test_ne_header/: exe_test_ne_header.vcproj
msvscpp/exe_test_notify/: exe_test_notify.vcproj
msvscpp/exe_test_open_close/: exe_test_open_close.vcproj
msvscpp/exe_test_read/: exe_test_read.vcproj
msvscpp/exe_test_section/: exe_test_section.vcproj
msvscpp/exe_test_section_descriptor/: exe_test_section_descriptor.vcproj
msvscpp/exe_test_section_io_handle/: exe_test_section_io_handle.vcproj
msvscpp/exe_test_seek/: exe_test_seek.vcproj
msvscpp/exe_test_set_ascii_codepage/: exe_test_set_ascii_codepage.vcproj
msvscpp/exe_test_support/: exe_test_support.vcproj
msvscpp/exe_test_tools_info_handle/: exe_test_tools_info_handle.vcproj
msvscpp/exe_test_tools_output/: exe_test_tools_output.vcproj
msvscpp/exe_test_tools_signal/: exe_test_tools_signal.vcproj
msvscpp/exeinfo/: exeinfo.vcproj
msvscpp/libexe/: libexe.vcproj
msvscpp/libexe_dll/: libexe_dll.vcproj
msvscpp/libfdata/: libfdata.vcproj
msvscpp/pyexe/: pyexe.vcproj
ossfuzz/: Makefile.am  file_fuzzer.c  file_fuzzer.cc  ossfuzz_libexe.h
pyexe/: Makefile.am  pyexe.c  pyexe.h  pyexe_codepage.c  pyexe_codepage.h  pyexe_datetime.c  pyexe_datetime.h  pyexe_error.c  pyexe_error.h  pyexe_file.c  pyexe_file.h  pyexe_file_object_io_handle.c  pyexe_file_object_io_handle.h  pyexe_integer.c  pyexe_integer.h  pyexe_libbfio.h  pyexe_libcerror.h  pyexe_libclocale.h  pyexe_libcstring.h  pyexe_libexe.h  pyexe_python.h  pyexe_section.c  pyexe_section.h  pyexe_sections.c  pyexe_sections.h  pyexe_unused.h  setup.py.in
pyexe-python2/: Makefile.am
pyexe-python3/: Makefile.am
pyexe2/: Makefile.am
pyexe3/: Makefile.am
tests/: Makefile.am  atlocal.in  exe_test_coff_header.c  exe_test_coff_optional_header.c  exe_test_data_directory_descriptor.c  exe_test_debug_data.c  exe_test_error.c  exe_test_export_table.c  exe_test_file.c  exe_test_functions.c  exe_test_functions.h  exe_test_get_version.c  exe_test_getopt.c  exe_test_getopt.h  exe_test_import_table.c  exe_test_io_handle.c  exe_test_le_header.c  exe_test_libbfio.h  exe_test_libcerror.h  exe_test_libclocale.h  exe_test_libcnotify.h  exe_test_libcstring.h  exe_test_libcsystem.h  exe_test_libcthreads.h  exe_test_libexe.h  exe_test_libuna.h  exe_test_macros.h  exe_test_memory.c  exe_test_memory.h  exe_test_mz_header.c  exe_test_ne_header.c  exe_test_notify.c  exe_test_open_close.c  exe_test_read.c  exe_test_section.c  exe_test_section_descriptor.c  exe_test_section_io_handle.c  exe_test_seek.c  exe_test_set_ascii_codepage.c  exe_test_support.c  (+38 more)
