include_HEADERS = \
	libexe.h

pkginclude_HEADERS = \
	libexe/codepage.h \
	libexe/definitions.h \
	libexe/error.h \
	libexe/extern.h \
	libexe/features.h \
	libexe/types.h

EXTRA_DIST = \
	libexe.h.in \
	libexe/definitions.h.in \
	libexe/features.h.in \
	libexe/types.h.in

DISTCLEANFILES = \
	libexe.h \
	libexe/definitions.h \
	libexe/features.h \
	libexe/types.h \
	Makefile \
	Makefile.in

