EXTRA_DIST = \
	libexe.pmdoc/01bin.xml.in \
	libexe.pmdoc/01bin-contents.xml \
	libexe.pmdoc/02include.xml.in \
	libexe.pmdoc/02include-contents.xml \
	libexe.pmdoc/03lib.xml.in \
	libexe.pmdoc/03lib-contents.xml \
	libexe.pmdoc/04share.xml.in \
	libexe.pmdoc/04share-contents.xml \
	libexe.pmdoc/05python.xml.in \
	libexe.pmdoc/05python-contents.xml \
	libexe.pmdoc/index.xml \
	libexe.pmdoc/index.xml.in \
	Introduction.rtf \
	Introduction.rtf.in \
	License.rtf \
	Readme.rtf

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f libexe.pmdoc/01bin.xml
	/bin/rm -f libexe.pmdoc/02include.xml
	/bin/rm -f libexe.pmdoc/03lib.xml
	/bin/rm -f libexe.pmdoc/04share.xml
	/bin/rm -f libexe.pmdoc/05python.xml
	/bin/rm -f libexe.pmdoc/index.xml
	/bin/rm -f Introduction.rtf
	/bin/rm -f Makefile

