MSVSCPP_FILES = \
	exe_test_error/exe_test_error.vcproj \
	exe_test_file/exe_test_file.vcproj \
	exe_test_open_close/exe_test_open_close.vcproj \
	exe_test_read/exe_test_read.vcproj \
	exe_test_section/exe_test_section.vcproj \
	exe_test_seek/exe_test_seek.vcproj \
	exe_test_set_ascii_codepage/exe_test_set_ascii_codepage.vcproj \
	exe_test_support/exe_test_support.vcproj \
	exeinfo/exeinfo.vcproj \
	libbfio/libbfio.vcproj \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcpath/libcpath.vcproj \
	libcsplit/libcsplit.vcproj \
	libcstring/libcstring.vcproj \
	libcsystem/libcsystem.vcproj \
	libcthreads/libcthreads.vcproj \
	libexe/libexe.vcproj \
	libfcache/libfcache.vcproj \
	libfdata/libfdata.vcproj \
	libfdatetime/libfdatetime.vcproj \
	libuna/libuna.vcproj \
	pyexe/pyexe.vcproj \
	libexe.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

