MSVSCPP_FILES = \
	exe_test_data_directory_descriptor/exe_test_data_directory_descriptor.vcproj \
	exe_test_debug_data/exe_test_debug_data.vcproj \
	exe_test_error/exe_test_error.vcproj \
	exe_test_export_table/exe_test_export_table.vcproj \
	exe_test_file/exe_test_file.vcproj \
	exe_test_import_table/exe_test_import_table.vcproj \
	exe_test_io_handle/exe_test_io_handle.vcproj \
	exe_test_notify/exe_test_notify.vcproj \
	exe_test_section/exe_test_section.vcproj \
	exe_test_section_descriptor/exe_test_section_descriptor.vcproj \
	exe_test_section_io_handle/exe_test_section_io_handle.vcproj \
	exe_test_support/exe_test_support.vcproj \
	exeinfo/exeinfo.vcproj \
	libbfio/libbfio.vcproj \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcpath/libcpath.vcproj \
	libcsplit/libcsplit.vcproj \
	libcthreads/libcthreads.vcproj \
	libexe/libexe.vcproj \
	libfcache/libfcache.vcproj \
	libfdata/libfdata.vcproj \
	libfdatetime/libfdatetime.vcproj \
	libuna/libuna.vcproj \
	pyexe/pyexe.vcproj \
	libexe.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

